added camera function

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,6 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation 'com.microsoft.projectoxford:vision:1.0.395'
+    implementation group: 'com.microsoft.azure.cognitiveservices', name: 'azure-cognitiveservices-computervision', version: '1.0.2-beta'
 }
